# NetifeDispatcher

./: .gitignore  CMakeLists.txt  README.md  main.cpp
gRpcModel/: NetifeMessage.grpc.pb.cc  NetifeMessage.grpc.pb.h  NetifeMessage.pb.cc  NetifeMessage.pb.h  probe.pb.cc  probe.pb.h
gRpcServices/: NetifeJsRemoteImpl.cpp  NetifeJsRemoteImpl.h  NetifePostClientImpl.cpp  NetifePostClientImpl.h  NetifeServiceImpl.cpp  NetifeServiceImpl.h
include/models/: NetworkRequest.h  NetworkResponse.h
include/plugins/v1/: NetifePluginAgent.h  NetifePlugins.h
lib/log/: easylogging++.h
plugins/v1/: CommandDescriptor.cpp  CommandDescriptor.h  HookDescriptor.cpp  HookDescriptor.h  NetifeAgentImpl.cpp  NetifeAgentImpl.h  PluginsDescriptor.cpp  PluginsDescriptor.h  PluginsDispatcher.cpp  PluginsDispatcher.h  ScriptDescriptor.cpp  ScriptDescriptor.h  SignalSlot.cpp  SignalSlot.h
proto/: NetifeMessage.proto  probe.proto
services/: NetifeStorage.cpp  NetifeStorage.h
utils/: TextHelper.cpp  TextHelper.h  logger.cpp  logger.h
